@@ -1,2 +1,3 @@
-.build
-Dist-Zilla-Util-Git-Wrapper-*
+/.build
+/Dist-Zilla-Util-Git-Wrapper-*
+/tmp/
