@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.007000 at Sat Dec  7 06:18:54 2013
+; vim: syntax=dosini
 name             = Dist-Zilla-Util-Git-Wrapper
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
